# movie-db

./: .gitignore  README.md  pyproject.toml  requirements.txt  start.sh  test_setup.py
.cursor/: mcp.json
backend/: client_demo.py  main.py  mcp_client.py  mcp_server.sh
development_work/: 01a_filter-data.ipynb  01b_filter-data.ipynb  01c_filter-data.ipynb  notes_01a_data_notes_v1.md  notes_01b_data.md  notes_02_neo4j.md  notes_03_app-dev.md  zz_next-steps.md
development_work/dummy_data/: actors.csv  movies.tsv  names.tsv  roles.csv  roles.tsv  title.principals.tsv  title.rating.tsv  tmp.tsv
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css
